--- a/css/main.css
+++ b/css/main.css
@@ -288,14 +288,17 @@ body {
 
 @media (max-width:450px) {
   .list-item {
-    position: relative;
-  }
+    position: relative;  }
 
   .list-item-left {
     display: block;
   }
 
   .logo {
+    width: 0px;
+    height: 0px;
+  }  
+  .logo::before {
     position: absolute;
     width: 48px;
     height: 48px;
